--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -58,7 +58,7 @@
 
 	<template id="card-preview">
 		<div class="card card_full">
-			<img class="card__image" src="<%=require('../images/Subtract.svg')%>" alt="" />
+			<img class="card__image" src="" alt="" />
 			<div class="card__column">
 				<span class="card__category card__category_other">другое</span>
 				<h2 class="card__title">Бэкенд-антистресс</h2>
@@ -107,7 +107,7 @@
 				</label>
 			</div>
 			<div class="modal__actions">
-				<button type="submit" disabled class="button order__button">Далее</button>
+				<button type="submit" disabled class="button order__button submit_button">Далее</button>
 				<span class="form__errors"></span>
 			</div>
 		</form>
@@ -118,15 +118,15 @@
 			<div class="order">
 				<label class="order__field">
 					<span class="form__label modal__title">Email</span>
-					<input name="email" class="form__input" type="text" placeholder="Введите Email" />
+					<input name="email" class="form__input form__input-email" type="text" placeholder="Введите Email" />
 				</label>
 				<label class="order__field">
 					<span class="form__label modal__title">Телефон</span>
-					<input name="phone" class="form__input" type="text" placeholder="+7 (" />
+					<input name="phone" class="form__input form__input-phone" type="text" placeholder="+7 (" />
 				</label>
 			</div>
 			<div class="modal__actions">
-				<button type="submit" disabled class="button">Оплатить</button>
+				<button type="submit" disabled class="button submit_button">Оплатить</button>
 				<span class="form__errors"></span>
 			</div>
 		</form>
